libs/@local/hashql/ast/tests/ui/lower/expander/import-resolver/generic-argument-absolute-path.jsonc
//@ run: fail
//@ description: Tests that generic arguments in non-final segments of paths are rejected with appropriate error
["::math<T>::add", { "#literal": 2 }, { "#literal": 3 }]
//~^ ERROR Remove this generic argument
